// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationCard component renders correctly if isFlat === true 1`] = `
<div>
  <address
    class="LocationCard-root-24 LocationCard-flat-25"
  >
    <h5
      class="MuiTypography-root Typography-root-33 MuiTypography-h5"
      data-testid="typography"
    >
      Area 51
    </h5>
    <dl
      class="LocationCard-list-26"
    >
      <dt
        class="LocationCard-term-28"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LocationCard-icon-29"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
        <p
          class="MuiTypography-root LocationCard-label-30 Typography-root-33 MuiTypography-body1"
          data-testid="typography"
        >
          Address
        </p>
      </dt>
      <dd
        class="LocationCard-description-31"
      >
        37°14′0″N 115°48′30″W
      </dd>
      <dt
        class="LocationCard-term-28"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LocationCard-icon-29"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
          />
        </svg>
        <p
          class="MuiTypography-root LocationCard-label-30 Typography-root-33 MuiTypography-body1"
          data-testid="typography"
        >
          Telephone
        </p>
      </dt>
      <dd
        class="LocationCard-description-31"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover LocationCard-link-32 AnchorLink-root-41 Anchorlink MuiTypography-colorPrimary"
          href="tel:000000000000"
        >
          <span>
            000000000000
          </span>
        </a>
      </dd>
      <dt
        class="LocationCard-term-28"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LocationCard-icon-29"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
        <p
          class="MuiTypography-root LocationCard-label-30 Typography-root-33 MuiTypography-body1"
          data-testid="typography"
        >
          Email
        </p>
      </dt>
      <dd
        class="LocationCard-description-31"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover LocationCard-link-32 AnchorLink-root-41 Anchorlink MuiTypography-colorPrimary"
          href="email:area@51.space"
        >
          <span>
            area@51.space
          </span>
        </a>
      </dd>
    </dl>
    <div
      class="LocationCard-footNote-27"
    >
      Monday - Friday, 9:00 - 17:00
    </div>
  </address>
</div>
`;

exports[`LocationCard component renders correctly with props 1`] = `
<div>
  <address
    class="LocationCard-root-1"
  >
    <h5
      class="MuiTypography-root Typography-root-10 MuiTypography-h5"
      data-testid="typography"
    >
      Area 51
    </h5>
    <dl
      class="LocationCard-list-3"
    >
      <dt
        class="LocationCard-term-5"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LocationCard-icon-6"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
        <p
          class="MuiTypography-root LocationCard-label-7 Typography-root-10 MuiTypography-body1"
          data-testid="typography"
        >
          Address
        </p>
      </dt>
      <dd
        class="LocationCard-description-8"
      >
        37°14′0″N 115°48′30″W
      </dd>
      <dt
        class="LocationCard-term-5"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LocationCard-icon-6"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
          />
        </svg>
        <p
          class="MuiTypography-root LocationCard-label-7 Typography-root-10 MuiTypography-body1"
          data-testid="typography"
        >
          Telephone
        </p>
      </dt>
      <dd
        class="LocationCard-description-8"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover LocationCard-link-9 AnchorLink-root-18 Anchorlink MuiTypography-colorPrimary"
          href="tel:000000000000"
        >
          <span>
            000000000000
          </span>
        </a>
      </dd>
      <dt
        class="LocationCard-term-5"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LocationCard-icon-6"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
        <p
          class="MuiTypography-root LocationCard-label-7 Typography-root-10 MuiTypography-body1"
          data-testid="typography"
        >
          Email
        </p>
      </dt>
      <dd
        class="LocationCard-description-8"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover LocationCard-link-9 AnchorLink-root-18 Anchorlink MuiTypography-colorPrimary"
          href="email:area@51.space"
        >
          <span>
            area@51.space
          </span>
        </a>
      </dd>
    </dl>
    <div
      class="LocationCard-footNote-4"
    >
      Monday - Friday, 9:00 - 17:00
    </div>
  </address>
</div>
`;
